Always aggressively optimize